2008-02-26  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.1:

	* deltavfs.tcl, versionvfs.tcl, quotavfs.tcl: minor bug
	  fixes and reformatting.

2008-02-15  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5:

	* Better formatting as Tcl package (added template/pkgIndex.tcl)
	* Added chrootvfs.tcl
	* Code refactored for simplicity and better performance
	* Added improved globfind package
	* Bug fixes.

2007-06-19  Andreas Kupries  <andreask@activestate.com>

	* library/starkit.tcl (header): See last entry. Simplified the
	  helper command 'fullnormalize', replaced complex file
	  split/lrange/join/eval operation with 'file dirname'.

2007-05-28  Andreas Kupries  <andreask@activestate.com>

	* library/starkit.tcl (header): Added helper command
	  'fullnormalize' and use it to resolve symlinks in the path to
	  the file calling starkit::header. This makes it possible to run
	  starkits and starpacks via symlinks.

2007-04-17  Andreas Kupries  <andreask@activestate.com>

	* library/zipvfs.tcl: "zip::DosTime" extended to handle bad
	  timestamps without crashing. Force-fixed to nearest legal
	  date/time. "zip::EndOfArchive" extended to find chunk even
	  if a (long) zip archive comment is present.

2007-04-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:     Applied patch #1589278 to include the template
	* pkgIndex.tcl.in: vfs files in the install.

2007-04-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in: Was failing install the pkgIndex.tcl file

2007-03-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* http2.6/http.tcl: Fixed some bugs (0 length body with chunked
	transfer) and added support for gzip encoding if zlib is
	available. Tested continued operation with Tcl 8.2.
	* library/webdavvfs.tcl: Encoding is now in the http package.
	* http2.6/pkgIndex.tcl: version to 2.6.6

2007-03-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
